tests/paczka1/fuzzy1/49804180.err
Error in line 7: OXNUPsCebNW S961 78,19
Error in line 6: LkIJo80 S502 54,8
Error in line 9: OXNUPsCebNW S961 89,9
Error in line 29: OXNUPsCebNW A558 72,5
